# test_instance_index

./: Cargo.toml  oily_naga.txt  raw_naga.txt
src/: main.rs  mod.wgsl  shader.wgsl  top.wgsl
