[package]
name = "test_instance_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga = {version = "0.12", features=["wgsl-in", "wgsl-out", "glsl-in", "glsl-out", "clone", "span"]}
naga_oil = "0.8.1"
